# feishu-CUA-Lark

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
configs/: desktop.yaml  feishu.yaml  model.yaml  safety.yaml
cua_lark/: __init__.py  main.py
cua_lark/actions/: __init__.py  clipboard.py  desktop_backend.py  executor.py  feishu_launcher.py  keyboard.py  mouse.py  window.py
cua_lark/agent/: __init__.py  memory.py  planner.py  recovery.py  safety_guard.py
cua_lark/config/: __init__.py  model_config.py
cua_lark/docs/: __init__.py  creator.py
cua_lark/feishu/: __init__.py  auth.py  calendar_api.py  docs_api.py  im_api.py
cua_lark/grounding/: __init__.py  coordinate.py  hybrid_grounder.py  vlm_grounder.py
cua_lark/perception/: __init__.py  accessibility.py  ocr.py  screen_state.py  screenshot.py  vlm.py
cua_lark/report/: __init__.py  markdown_report.py
cua_lark/task/: __init__.py  loader.py  parser.py  (+1 more)
docs/: PHASE2_REAL_PERCEPTION_TEST_COMMANDS.md  architecture.md  roadmap.md  safety.md
skills/: calendar.md  common_popups.md  docs.md  im.md  keyboard_shortcuts.md
tests/: test_cli_modes.py  test_coordinate.py  test_desktop_backend.py  test_docs_create_cli.py  test_docs_creator.py  test_feishu_auth.py  test_feishu_im_api.py  test_im_verifier.py  test_llm_planner.py  test_message_module_visual.py  test_ocr_client.py  test_real_perceptor.py  test_recovery_rules.py  test_safety_guard.py  test_screenshot.py  test_target_name_normalization.py  test_task_loader.py  test_trace_recorder.py  test_visual_grounding.py  test_visual_im_flow_no_fallback.py  test_visual_open_chat.py  test_vlm_client.py
(+20 files in other folders)
