[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cua-lark"
version = "0.1.0"
description = "Visual-first CUA testing scaffold for Feishu/Lark desktop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "PyYAML",
  "pytest",
  "pyautogui",
  "pyperclip",
  "mss",
  "Pillow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["cua_lark*"]
