[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cua-lark"
version = "0.1.0"
description = "Visual-first CUA testing scaffold for Feishu/Lark desktop."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "PyYAML",
  "pytest",
  "pyautogui",
  "pyperclip",
  "mss",
  "Pillow",
  "dashscope>=1.20",
  "rapidocr-onnxruntime>=1.4",
  "httpx>=0.27",
  "pywin32>=306; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["cua_lark*"]
